[package]
name = "outcidr"
version = "0.1.0"
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr-utils = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.num-bigint]
version = "0.2.6"
features = ["serde"]
